--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,65 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.foto {
+  width: 100%;
+  height: 650px;
+}
+
+.Header{
+  background-image: url('./touch.jpg')
+  
+}
+
+.white {
+  color: white;
+}
+
+.darkbg{
+  color: white;
+  background-color: black;
+  width: 20%;
+  margin-left: 120px;
+ 
+}
+
+.myself{
+  width: 600px;
+  margin-left: 200px;
+  margin-top: 40px;
+}
+
+.darkbgtwo{
+  color: white;
+  background-color: black;
+  width: 40%;
+  margin-top: 30px;
+  margin-left: 800px;
+ 
+}
+
+.bio{
+  width: 600px;
+  margin-left: 450px;
+}
+
+.code{
+  width: 120px;
+  height: 120px;
+}
+
+ul {
+  margin-top: 20px;
+  list-style: none;
+  display: inline-flex;
+
+}
+li {
+  margin-right: 50px;
+}
+
+.resp{
+  width: 500px;
+  height: 300px;
+}
